--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="row align-items-center justify-content-center">
       <div class="col-12">
         <div class="d-flex align-items-center justify-content-center">
-          <h2 class="text-start me-3">Tech Stack</h2>
+          <h2 class="text-start me-md-3 me-0">Tech Stack</h2>
           <div class="ms-5 d-flex align-items-center">
             <svg class="icon me-3" version="1.1" xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 1024 1024">
               
